src/objects/Energy_Supplier_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Comm_Hub_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comm Hub Variant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Communication Hubs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Energy Supplier Forecast</relationshipLabel>
        <relationshipName>Energy_Supplier_Forecast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Month_10__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Current_Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month_11__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Current_Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month_12__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Current_Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Account object of Energy Supplier</description>
        <label>Energy Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Energy Supplier Forecast</relationshipLabel>
        <relationshipName>Energy_Supplier_Forecast_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Header__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Forecast Header</label>
        <referenceTo>Forecast_Header__c</referenceTo>
        <relationshipLabel>Energy Supplier Forecast</relationshipLabel>
        <relationshipName>Energy_Supplier_Forecast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <label>Month 10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <label>Month 11</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_12__c</fullName>
        <label>Month 12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month_10__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Previous_Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_11__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Previous_Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_12__c</fullName>
        <defaultValue>000</defaultValue>
        <label>Previous_Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;new&quot;</defaultValue>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Energy Supplier Forecast</label>
    <nameField>
        <displayFormat>ESF-{00000}</displayFormat>
        <label>Energy Supplier Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Supplier Forecast</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>